# zaixiankefuruanjian

./: .gitignore  AGENTS.md  AI客服按钮原型 (离线版).html  README.md  package.json  pnpm-lock.yaml
AI客服prompt/: kefu.md
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: .env.example  package.json  tsconfig.json  vitest.config.ts
docs/: architecture.md  auto-update.md  automation-flows.md  backend-completion.md  backend-development.md  constraints.json  progress.md  project-context.md  requirements.md  security.md  verification.md  前端UI设计文档.md  项目开发文档.md
docs/memory/: 2026-06-28-1319-project-init.md  2026-06-28-1402-backend-cloud.md  2026-06-29-1200-frontend-api-integration.md  2026-06-29-1225-local-env-setup.md  2026-06-29-1242-create-conversation-fix.md  2026-06-29-1340-chat-stream-cors-fix.md  2026-06-29-1359-login-preferences.md  2026-06-30-1529-ux-replies-quit-and-release.md  2026-06-30-1555-hidden-button-redesign.md
docs/plans/: 2026-06-28-外卖客服桌面助手实施计划.md
docs/wireframes/: README.md
harness-project-development/: README.md  SKILL.md  superpowers-agents-guidelines.md
harness-project-development/evals/: evals.json
harness-project-development/references/: 01-requirements-and-constraints.md  02-agents-md-and-docs.md  03-architecture-contracts.md  04-rpa-and-security.md  (+4 more)
scripts/: harness_checks.py  verify.py
前端ui原型图/: .thumbnail  外卖客服桌面助手.dc.html
(+74 files in other folders)
