[package]
name = "zaixiankefu_desktop"
version = "0.1.0"
description = "外卖在线客服助手桌面端"
authors = ["zaixiankefu"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zaixiankefu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zaixiankefu-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
